updating wording on home page

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
 </h1>
 <p> </p>
 	
-<p> As a spinoff of the <a href="http://www.uav.aem.umn.edu">University of Minnesota UAS Research Labs</a>, we are building on the ground breaking research conducted at the University to develop high quality sensing, flight control, and navigation systems and integrated aircraft for hobbyists and businesses. We provide the best total solutions for our customers enabling them to meet their performance needs.  </p>
+<p> As a spinoff of the <a href="http://www.uav.aem.umn.edu">University of Minnesota UAS Research Labs</a>, we are building on the ground breaking research conducted at the University to develop high quality sensing, flight control, and navigation systems and integrated aircraft for makers, researchers and businesses. We provide the best total solutions for our customers enabling them to meet their performance needs.  </p>
 
-<p> Please check back to learn more as our commercial products become available or contact us to see what solutions we can offer for your business. </p>
+<p> Please check back to learn more as our products become available or contact us to see what custom solutions we can offer for your business. </p>
 
 </div>
 
