updating site layout to clean up and use logo as title

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <div class="wrapper">
 
-    <a class="site-title" href="/">Bolder Flight Systems</a>
+    <a class="site-title" href="/">Bolder Flight Systems <IMG style="float: left;" SRC="/images/logo.jpg" WIDTH=325 ></a>
 
     <nav class="site-nav">
       <a href="#" class="menu-icon">
@@ -55,13 +55,7 @@
 
     <div class="page-content">
       <div class="wrapper">
-        <div class="home">
-<h1 style="text-align:center;">
-<IMG SRC="images/logo.jpg" WIDTH=400 >
-</h1>
-<p> </p>
-	
-<p> As a spinoff of the <a href="http://www.uav.aem.umn.edu">University of Minnesota UAS Research Labs</a>, we are building on the ground breaking research conducted at the University to develop high quality sensing, flight control, and navigation systems and integrated aircraft for makers, researchers and businesses. We provide the best total solutions for our customers enabling them to meet their performance needs.  </p>
+        <p> As a spinoff of the <a href="http://www.uav.aem.umn.edu">University of Minnesota UAS Research Labs</a>, we are building on the ground breaking research conducted at the University to develop high quality sensing, flight control, and navigation systems, along with fully integrated aircraft, for makers, researchers and businesses. We provide the best total solutions for our customers enabling them to meet their performance needs.  </p>
 
 <p> Please check back to learn more as our products become available or contact us to see what custom solutions we can offer for your business. </p>
 
