Updating website format.

--- a/about/index.html
+++ b/about/index.html
@@ -18,7 +18,7 @@
 
 
 
-<meta name="description" content="An amazing website.">
+<meta name="description" content="Bolder Flight Systems Inc. Website">
 
 
 
@@ -53,7 +53,7 @@
     {
       "@context" : "http://schema.org",
       "@type" : "Person",
-      "name" : "Bolder Flight Systems",
+      "name" : "Bolder Flight Systems Inc",
       "url" : null,
       "sameAs" : null
     }
@@ -148,7 +148,7 @@
       
 
       <section class="page__content" itemprop="text">
-        <p>As a spinoff of the <a href="http://www.uav.aem.umn.edu">University of Minnesota UAS Research Labs</a>, we are building on years of experience and ground breaking research to provide <strong>the best</strong> platform for drone research and development for makers, research institutions, and businesses. Our platform is uniquely capable, consisting of:</p>
+        <p>As a spinoff of the <a href="http://www.uav.aem.umn.edu">University of Minnesota UAS Research Labs</a>, we are building on years of experience and ground breaking research to provide the best platform for drone research and development for makers, research institutions, and businesses. Our platform is uniquely capable, consisting of:</p>
 
 <div class="feature__wrapper">
 
@@ -355,7 +355,7 @@
   </ul>
 </div>
 
-<div class="page__footer-copyright">&copy; 2017 Bolder Flight Systems. <a href="mailto:info@bolderflight.com"><font color="#4863A0">info@bolderflight.com</font></a>
+<div class="page__footer-copyright">&copy; 2017 Bolder Flight Systems Inc. Designed and assembled in the United States. <a href="mailto:info@bolderflight.com"><font color="#4863A0">info@bolderflight.com</font></a>
 </div>
       </footer>
     </div>
