--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     {
       "@context" : "http://schema.org",
       "@type" : "Person",
-      "name" : "Bolder Flight Systems",
+      "name" : "Bolder Flight Systems Inc",
       "url" : null,
       "sameAs" : null
     }
@@ -222,7 +222,7 @@
   </ul>
 </div>
 
-<div class="page__footer-copyright">&copy; 2017 Bolder Flight Systems. <a href="mailto:info@bolderflight.com"><font color="#4863A0">info@bolderflight.com</font></a>
+<div class="page__footer-copyright">&copy; 2017 Bolder Flight Systems Inc. Designed and assembled in the United States. <a href="mailto:info@bolderflight.com"><font color="#4863A0">info@bolderflight.com</font></a>
 </div>
       </footer>
     </div>
