--- a/technical/index.html
+++ b/technical/index.html
@@ -18,7 +18,7 @@
 
 
 
-<meta name="description" content="An amazing website.">
+<meta name="description" content="Bolder Flight Systems Inc. Website">
 
 
 
@@ -53,7 +53,7 @@
     {
       "@context" : "http://schema.org",
       "@type" : "Person",
-      "name" : "Bolder Flight Systems",
+      "name" : "Bolder Flight Systems Inc",
       "url" : null,
       "sameAs" : null
     }
@@ -192,6 +192,8 @@
   </nav>
 </aside>
 
+<p><a name="Overview"></a></p>
+
 <h1 id="overview">Overview</h1>
 
 <p><a name="Flight-Systems"></a></p>
@@ -222,11 +224,15 @@
 
 <p style="font-size: 80%;">This system easily scales to meet the needs of a given research and development program or platform. It can accommodate relatively small and simple vehicles up to large and complex systems while maintaining low latency and determinism.</p>
 
+<p style="font-size: 75%;"><a href="/technical/#Overview">Back to top.</a></p>
+
 <p><a name="Simulation"></a></p>
 
 <h2 id="simulation">Simulation</h2>
 
-<p style="font-size: 80%;">Simulation, verification, validation, and data analysis are crucial components to research and development programs. A high fidelity MATLAB / Simulink simulation is available to support these steps. This simulation has been used at the University of Minnesota and other research institutions to support courses and research since 2006. It effectively supports switching between multiple research aircraft to be simulated, is easy to add additional vehicles, and supports multiple levels of model fidelity. This simulation is in the process of being updated to support software and hardware in the loop testing, as well as autocode generation and flight data playback, with our updated flight control system. This capability should be available summer of 2017.</p>
+<p style="font-size: 80%;">Simulation, verification, validation, and data analysis are crucial components to research and development programs. A high fidelity MATLAB / Simulink simulation is available to support these steps. This simulation has been used at the University of Minnesota and other research institutions to support courses and research since 2006. It effectively supports switching between multiple research aircraft to be simulated, is easy to add additional vehicles, and supports multiple levels of model fidelity. This simulation is in the process of being updated to support software and hardware in the loop testing, as well as autocode generation and flight data playback, with our updated flight control system. This capability is expected to be available summer of 2017.</p>
+
+<p style="font-size: 75%;"><a href="/technical/#Overview">Back to top.</a></p>
 
 <p><a name="Development-Environment"></a></p>
 
@@ -235,6 +241,8 @@
 <p style="font-size: 80%;">Arduino is used as a development environment for the Flight Management Unit (FMU) and expansion sensor and actuator nodes. Libraries are available for all Bolder Flight Systems supplied sensors and, due to the vibrant Teensy and Arduino communities, many additional sensors are already supported. These processors are extremely powerful and well supported by the community. Software is uploaded via USB and coding is standard C++. Our high level processor runs Linux, offering a very common development environment with packaged libraries and supporting many coding languages (C++, Python, Rust, etc).</p>
 
 <p style="font-size: 80%;">This approach enables great performance from our system while maintaining a researcher friendly development environment.</p>
+
+<p style="font-size: 75%;"><a href="/technical/#Overview">Back to top.</a></p>
 
 <p><a name="Marmot-Flight-Control-System"></a></p>
 
@@ -268,6 +276,8 @@
 
 <p class="notice--warning">This system is intended for research, development, and educational purposes. It is not a ready-to-fly autopilot. We provide tested hardware, low level sensor drivers, a development environment, and support to enable our customers to develop software, analyze data, and conduct research.</p>
 
+<p style="font-size: 75%;"><a href="/technical/#Overview">Back to top.</a></p>
+
 <p><a name="Raven-Node"></a></p>
 
 <h1 id="raven-sensor-and-actuator-node">Raven Sensor and Actuator Node</h1>
@@ -300,6 +310,8 @@
 
 <p class="notice--warning">This system is intended for research, development, and educational purposes. It is not a ready-to-fly autopilot. We provide tested hardware, low level sensor drivers, a development environment, and support to enable our customers to develop software, analyze data, and conduct research.</p>
 
+<p style="font-size: 75%;"><a href="/technical/#Overview">Back to top.</a></p>
+
 <p><a name="Swift-Air-Data"></a></p>
 
 <h1 id="swift-air-data">Swift Air Data</h1>
@@ -321,6 +333,8 @@
   <li>Size: 28 mm x 40 mm x 18.5 mm</li>
   <li>Weight: 10 g</li>
 </ul>
+
+<p style="font-size: 75%;"><a href="/technical/#Overview">Back to top.</a></p>
 
 <p><a name="Add-On-Modules"></a></p>
 
@@ -363,6 +377,8 @@
   <li>Weight: 2 g</li>
 </ul>
 
+<p style="font-size: 75%;"><a href="/technical/#Overview">Back to top.</a></p>
+
 <h2 id="vectornav">VectorNav</h2>
 
 <p style="font-size: 80%;"><a href="http://www.vectornav.com">VectorNav VN-100 and VN-200</a> inertial measurement units can be added on to the <a href="#Marmot-Flight-Control-System">Marmot FCS</a> for use cases where more accurate inertial data is desired. This module can be mounted on the Marmot FCS with 2-56 sized standoffs, which are provided. The VN-100 and VN-200 IMU’s are integrated with SPI for high speed data transfers and a low level sensor driver is available to setup the IMU’s and collect data.</p>
@@ -374,6 +390,8 @@
   <li>Size: 30 mm x 37 mm x 5 mm</li>
   <li>Weight: 5 g</li>
 </ul>
+
+<p style="font-size: 75%;"><a href="/technical/#Overview">Back to top.</a></p>
 
 <h1 id="connectors">Connectors</h1>
 
@@ -387,6 +405,8 @@
 <p class="notice--danger"><strong>Watch out!</strong> All signal voltages <strong>must be</strong> +3.3V, higher voltage signals may damage components!</p>
 
 <p style="font-size: 80%;">All bused signals are designed to provide two identical connectors per each interface per node, so that the node can be connected to the bus without need to use T-connectors.</p>
+
+<p style="font-size: 75%;"><a href="/technical/#Overview">Back to top.</a></p>
 
 <p><a name="BFS-Bus-I2C"></a></p>
 
@@ -439,6 +459,8 @@
   </tr>
 </table>
 
+<p style="font-size: 75%;"><a href="/technical/#Overview">Back to top.</a></p>
+
 <h2 id="uart">UART</h2>
 
 <table style="width:50%">
@@ -473,6 +495,8 @@
     <td>GND</td>
   </tr>
 </table>
+
+<p style="font-size: 75%;"><a href="/technical/#Overview">Back to top.</a></p>
 
 <h2 id="i2c">I2C</h2>
 
@@ -509,6 +533,8 @@
   </tr>
 </table>
 
+<p style="font-size: 75%;"><a href="/technical/#Overview">Back to top.</a></p>
+
 <h2 id="can">CAN</h2>
 
 <table style="width:50%">
@@ -543,6 +569,8 @@
     <td>GND</td>
   </tr>
 </table>
+
+<p style="font-size: 75%;"><a href="/technical/#Overview">Back to top.</a></p>
 
 <h2 id="spi">SPI</h2>
 
@@ -603,6 +631,8 @@
   </tr>
 </table>
 
+<p style="font-size: 75%;"><a href="/technical/#Overview">Back to top.</a></p>
+
 <h2 id="sbus-rx">SBUS RX</h2>
 
 <p class="notice--danger"><strong>Watch out!</strong> The SBUS RX is for RC receivers only and provides power to the receiver. <strong>Never</strong> connect any servos, power supplies or batteries to it or to the receiver connected to it.</p>
@@ -634,6 +664,8 @@
   </tr>
 </table>
 
+<p style="font-size: 75%;"><a href="/technical/#Overview">Back to top.</a></p>
+
 <h2 id="sbus-tx">SBUS TX</h2>
 
 <p class="notice--warning">Pin 1 is used to measure the external voltage applied to the SBUS servos, which can be used and logged within the flight software. This voltage is limited to +9.9V.</p>
@@ -664,6 +696,8 @@
     <td>GND</td>
   </tr>
 </table>
+
+<p style="font-size: 75%;"><a href="/technical/#Overview">Back to top.</a></p>
 
 <h2 id="pwm-1">PWM</h2>
 
@@ -738,6 +772,8 @@
   </tr>
 </table>
 
+<p style="font-size: 75%;"><a href="/technical/#Overview">Back to top.</a></p>
+
 <h2 id="analog-1">Analog</h2>
 
 <table style="width:50%">
@@ -809,6 +845,8 @@
   </tr>
 </table>
 
+<p style="font-size: 75%;"><a href="/technical/#Overview">Back to top.</a></p>
+
 <h2 id="digital">Digital</h2>
 
 <table style="width:50%">
@@ -843,6 +881,8 @@
     <td>+3.3V</td>
   </tr>
 </table>
+
+<p style="font-size: 75%;"><a href="/technical/#Overview">Back to top.</a></p>
 
 <h2 id="gpio">GPIO</h2>
 
@@ -879,6 +919,8 @@
   </tr>
 </table>
 
+<p style="font-size: 75%;"><a href="/technical/#Overview">Back to top.</a></p>
+
 <h1 id="bfs-bus-1">BFS Bus</h1>
 
 <h2 id="overview-1">Overview</h2>
@@ -888,6 +930,8 @@
 <h2 id="wiring">Wiring</h2>
 
 <p style="font-size: 80%;">Please see the <a href="#BFS-Bus-I2C">BFS Bus connector standards</a>.</p>
+
+<p style="font-size: 75%;"><a href="/technical/#Overview">Back to top.</a></p>
 
     </section>
   </article>
@@ -913,7 +957,7 @@
   </ul>
 </div>
 
-<div class="page__footer-copyright">&copy; 2017 Bolder Flight Systems. <a href="mailto:info@bolderflight.com"><font color="#4863A0">info@bolderflight.com</font></a>
+<div class="page__footer-copyright">&copy; 2017 Bolder Flight Systems Inc. Designed and assembled in the United States. <a href="mailto:info@bolderflight.com"><font color="#4863A0">info@bolderflight.com</font></a>
 </div>
       </footer>
     </div>
