--- a/community/index.html
+++ b/community/index.html
@@ -18,7 +18,7 @@
 
 
 
-<meta name="description" content="An amazing website.">
+<meta name="description" content="Bolder Flight Systems Inc. Website">
 
 
 
@@ -53,7 +53,7 @@
     {
       "@context" : "http://schema.org",
       "@type" : "Person",
-      "name" : "Bolder Flight Systems",
+      "name" : "Bolder Flight Systems Inc",
       "url" : null,
       "sameAs" : null
     }
@@ -162,12 +162,6 @@
   <li>We partner with Universities that publish flight data and software open-source, such as the <a href="http://www.uav.aem.umn.edu">University of Minnesota</a>. This enables researchers to develop algorithms against this open-source data and businesses to transition research into commercial products.</li>
 </ul>
 
-<p style="font-size: 80%;">Please join our growing community today by signing up for our <a href="http://forum.bolderflight.com">forum</a>.</p>
-
-<p align="center">
-    <a href="http://forum.bolderflight.com" class="btn btn--info btn--large">Visit our Forum</a>
-</p>
-
         
       </section>
 
@@ -211,7 +205,7 @@
   </ul>
 </div>
 
-<div class="page__footer-copyright">&copy; 2017 Bolder Flight Systems. <a href="mailto:info@bolderflight.com"><font color="#4863A0">info@bolderflight.com</font></a>
+<div class="page__footer-copyright">&copy; 2017 Bolder Flight Systems Inc. Designed and assembled in the United States. <a href="mailto:info@bolderflight.com"><font color="#4863A0">info@bolderflight.com</font></a>
 </div>
       </footer>
     </div>
