--- a/services/index.html
+++ b/services/index.html
@@ -18,7 +18,7 @@
 
 
 
-<meta name="description" content="An amazing website.">
+<meta name="description" content="Bolder Flight Systems Inc. Website">
 
 
 
@@ -53,7 +53,7 @@
     {
       "@context" : "http://schema.org",
       "@type" : "Person",
-      "name" : "Bolder Flight Systems",
+      "name" : "Bolder Flight Systems Inc",
       "url" : null,
       "sameAs" : null
     }
@@ -252,7 +252,7 @@
   </ul>
 </div>
 
-<div class="page__footer-copyright">&copy; 2017 Bolder Flight Systems. <a href="mailto:info@bolderflight.com"><font color="#4863A0">info@bolderflight.com</font></a>
+<div class="page__footer-copyright">&copy; 2017 Bolder Flight Systems Inc. Designed and assembled in the United States. <a href="mailto:info@bolderflight.com"><font color="#4863A0">info@bolderflight.com</font></a>
 </div>
       </footer>
     </div>
