Fixed a minor typo.

--- a/technical/index.html
+++ b/technical/index.html
@@ -250,7 +250,7 @@
 
 <p><a href="/assets/images/marmot_1146.png"><img src="/assets/images/marmot_300.png" alt="image-right" class="align-right" /></a></p>
 
-<p style="font-size: 80%;">The core of our flight system consisting of dual heterogeneous processors: a low level processor, called the Flight Management Unit (FMU), which conducts sensor and actuator operations, filtering, and maintains a hard real time environment; and a high level processor which uses the filtered sensor data to run control loops and compute actuator commands. The Marmot Flight Control System (FCS) uses a BeagleBone Black as a high level processor and a cape developed around the Teensy 3.6 as the FMU. The Teensy 3.6 processor is a 240 MHz Cortex M4 with a single precision hardware floating point unit. In addition the Teensy 3.6, the FMU includes integrated:</p>
+<p style="font-size: 80%;">The core of our flight system consisting of dual heterogeneous processors: a low level processor, called the Flight Management Unit (FMU), which conducts sensor and actuator operations, filtering, and maintains a hard real time environment; and a high level processor which uses the filtered sensor data to run control loops and compute actuator commands. The Marmot Flight Control System (FCS) uses a BeagleBone Black as a high level processor and a cape developed around the Teensy 3.6 as the FMU. The Teensy 3.6 processor is a 240 MHz Cortex M4 with a single precision hardware floating point unit. In addition to the Teensy 3.6, the FMU includes integrated:</p>
 <ul style="font-size: 80%;">
   <li>Voltage regulation, +6.5V to +36V input voltage, up to 2A of +5V output capacity plus high accuracy measurement of input and regulated voltages</li>
   <li>MPU-9250 nine axis inertial measurement unit</li>
