Updating products page.

--- a/products/index.html
+++ b/products/index.html
@@ -134,7 +134,7 @@
     <section class="page__content" itemprop="text">
       <h2 id="products">Products</h2>
 
-<p style="font-size: 80%;">All of our products include free domestic shipping. International, business, and research institution customers, please <a href="mailto:info@bolderflight.com">contact us</a> for pricing, shipping, support and engineering service contracts.</p>
+<p style="font-size: 80%;">All of our products include free domestic shipping. International, business, and research institution customers, please <a href="mailto:info@bolderflight.com">contact us</a> for pricing, support, and engineering service contracts.</p>
 
 <h3 id="marmot-flight-management-unit-225">Marmot Flight Management Unit $225</h3>
 
