Adding links for BBB.

--- a/products/index.html
+++ b/products/index.html
@@ -140,9 +140,9 @@
 
 <p><img src="/assets/images/marmot_200.png" alt="image-left" class="align-left" /></p>
 
-<p style="font-size: 80%;">The central component to the Bolder Flight Systems architecture. Integrates with a BeagleBone Black to provide dual heterogeneous processors, integrated IMU and pressure sensors, onboard voltage regulation, and heaps of ports for expansion. <a href="/technical/#Marmot-Flight-Control-System">More Information</a></p>
+<p style="font-size: 80%;">The central component to the Bolder Flight Systems architecture. Integrates with a <a href="http://beagleboard.org/black">BeagleBone Black</a> to provide dual heterogeneous processors, integrated IMU and pressure sensors, onboard voltage regulation, and heaps of ports for expansion. <a href="/technical/#Marmot-Flight-Control-System">More Information</a></p>
 
-<p style="font-size: 80%;"><strong>Includes</strong>: Marmot Flight Management Unit (BeagleBone Black <strong>not</strong> included), standoffs and screws.</p>
+<p style="font-size: 80%;"><strong>Includes</strong>: Marmot Flight Management Unit (<a href="http://beagleboard.org/black">BeagleBone Black</a> <strong>not</strong> included), standoffs and screws.</p>
 
 <div id="product-component-0e08ed4dc33"></div>
 <script type="text/javascript">
