Warning about holiday shipping.

--- a/products/index.html
+++ b/products/index.html
@@ -152,6 +152,8 @@
 
 <p style="font-size: 80%;">All of our products include free domestic shipping. International, business, and research institution customers, please <a href="mailto:info@bolderflight.com">contact us</a> for pricing, support, and engineering service contracts.</p>
 
+<p class="notice--danger">Due to the holiday season, orders will be fulfilled starting December 28th.</p>
+
 <h3 id="marmot-flight-management-unit-225">Marmot Flight Management Unit $225</h3>
 
 <p><img src="/assets/images/marmot_200.png" alt="image-left" class="align-left" /></p>
