Updated store to include integrated aircraft and computers.

--- a/products/index.html
+++ b/products/index.html
@@ -137,6 +137,281 @@
 
 <p style="font-size: 80%;">All of our products include free domestic shipping. International, business, and research institution customers, please <a href="mailto:info@bolderflight.com">contact us</a> for pricing, support, and engineering service contracts.</p>
 
+<h3 id="integrated-research-drones">Integrated Research Drones</h3>
+<p style="font-size: 80%;">Two fixed wing and one multi rotor drone are available fully integrated and ready for research. The fixed wing platforms are based on the X-UAV Talon and <a href="https://www.horizonhobby.com/EFL4025">Ultra Stick 25e</a> while the <a href="https://www.dji.com/flame-wheel-arf">DJI Flame Wheel</a> is used for our multi rotor platform.</p>
+
+<p style="font-size: 80%;"><a href="https://www.youtube.com/watch?v=FUXRlwhYarU"><img src="/assets/images/talon.png" alt="image-left" class="align-left" /></a> 
+The X-UAV Talon is a large fixed wing drone with a pusher motor configuration and is capable of carrying large payloads. This setup is ideal for research and development for fixed wing drone applications and sensors, such as precision agriculture and power line, road, or rail inspection. Can acheive flight times as long as two hours!</p>
+
+<p style="font-size: 80%;"><img src="/assets/images/us25e.png" alt="image-right" class="align-right" /> 
+The <a href="https://www.horizonhobby.com/EFL4025">Ultra Stick 25e</a> is a maneuverable fixed wing drone. This drone is ideal for flight controls and dynamics education and research. It is structurally stiff with low inherent stability. The drone is small, lightweight, and hand launchable. This configuration has been used extensively at the University of Minnesota for flight controls and dynamics courses and research. Flight validated aerodynamic models and Simulink simulations are available.</p>
+
+<p style="font-size: 80%;">The <a href="https://www.dji.com/flame-wheel-arf">DJI Flame Wheel</a> is a large hexacopter. With ample payload capability and long flight times, this drone is ideal for researching multi rotor drone applications and sensors, such as precision agriculture and building inspections.</p>
+
+<p style="font-size: 80%;">All of our integrated drones include:</p>
+<ul style="font-size: 80%;">
+  <li>Our fully integrated flight control system with software loaded, configured, and tested.</li>
+  <li>Integrated GPS and SBUS receivers.</li>
+  <li>All components necessary for the drone to be flight ready (servos, ESC’s, propellers, batteries).</li>
+  <li>Fully calibrated sensors and actuators.</li>
+</ul>
+
+<p style="font-size: 80%;">In addition, our fixed wing drones include a Swift air data system for accurately measuring airspeed. In order to provide a world class aeronautics research platform, the Ultra Stick 25e also includes:</p>
+<ul style="font-size: 80%;">
+  <li>Calibrated potentiometers for measuring and recording control surfaces positions.</li>
+  <li>Raven Sensor and Actuator Node to make the wings swapable between aircraft.</li>
+  <li>Moment of inertia and actuator testing.</li>
+  <li>Aerodynamic, mass properties, and actuator models and a Simulink simulation.</li>
+</ul>
+
+<p style="font-size: 80%;">Our X-UAV Talon and DJI Flame Wheel integrated research drones are $4,000 and the Ultra Stick 25e is $8,000. Please <a href="mailto:info@bolderflight.com">contact us</a> if you have questions, would like more information, or would like to discuss additional options.</p>
+
+<p style="font-size: 80%;">It’s a high quality, research ready drone in a box! You only need to supply a transmitter and battery charger.</p>
+
+<div id="product-component-602a6e1d08f"></div>
+<script type="text/javascript">
+/*<![CDATA[*/
+
+(function () {
+  var scriptURL = 'https://sdks.shopifycdn.com/buy-button/latest/buy-button-storefront.min.js';
+  if (window.ShopifyBuy) {
+    if (window.ShopifyBuy.UI) {
+      ShopifyBuyInit();
+    } else {
+      loadScript();
+    }
+  } else {
+    loadScript();
+  }
+
+  function loadScript() {
+    var script = document.createElement('script');
+    script.async = true;
+    script.src = scriptURL;
+    (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(script);
+    script.onload = ShopifyBuyInit;
+  }
+
+  function ShopifyBuyInit() {
+    var client = ShopifyBuy.buildClient({
+      domain: 'bolder-flight-systems.myshopify.com',
+      apiKey: '5d031c37716943c132181e6697fc221a',
+      appId: '6',
+    });
+
+    ShopifyBuy.UI.onReady(client).then(function (ui) {
+      ui.createComponent('product', {
+        id: [1297874485350],
+        node: document.getElementById('product-component-602a6e1d08f'),
+        moneyFormat: '%24%7B%7Bamount%7D%7D',
+        options: {
+  "product": {
+    "variantId": "all",
+    "width": "240px",
+    "contents": {
+      "img": false,
+      "imgWithCarousel": false,
+      "title": false,
+      "variantTitle": false,
+      "price": false,
+      "description": false,
+      "buttonWithQuantity": false,
+      "quantity": false
+    },
+    "styles": {
+      "product": {
+        "@media (min-width: 601px)": {
+          "max-width": "100%",
+          "margin-left": "0",
+          "margin-bottom": "50px"
+        }
+      },
+      "variantTitle": {
+        "font-size": "16px"
+      },
+      "description": {
+        "font-size": "16px"
+      },
+      "compareAt": {
+        "font-size": "12px"
+      }
+    }
+  },
+  "cart": {
+    "contents": {
+      "button": true
+    },
+    "styles": {
+      "footer": {
+        "background-color": "#ffffff"
+      }
+    }
+  },
+  "modalProduct": {
+    "contents": {
+      "img": false,
+      "imgWithCarousel": true,
+      "variantTitle": false,
+      "buttonWithQuantity": true,
+      "button": false,
+      "quantity": false
+    },
+    "styles": {
+      "product": {
+        "@media (min-width: 601px)": {
+          "max-width": "100%",
+          "margin-left": "0px",
+          "margin-bottom": "0px"
+        }
+      }
+    }
+  },
+  "productSet": {
+    "styles": {
+      "products": {
+        "@media (min-width: 601px)": {
+          "margin-left": "-20px"
+        }
+      }
+    }
+  }
+}
+      });
+    });
+  }
+})();
+/*]]>*/
+</script>
+
+<p style="font-size: 80%;"><br />
+Looking for something different? We also offer fully custom drone integrations and can even build up a full research laboratory for your institution or business. <a href="mailto:info@bolderflight.com">Contact us</a> to discuss your requirements.</p>
+
+<h3 id="integrated-flight-control-system-450">Integrated Flight Control System $450</h3>
+<p style="font-size: 80%;">Our Marmot Flight Management Unit integrated with a BeagleBone Black. Starting with your configuration, your flight control system will arrive with fully loaded, configured, and tested software. Includes standoffs, screws, and wiring harnesses. Truly plug and play and ready for research.</p>
+
+<p style="font-size: 80%;"><strong>Includes</strong>: Marmot Flight Management Unit; <a href="http://beagleboard.org/black">BeagleBone Black</a>; loaded, configured, and tested software; all wiring harnesses; standoffs and screws.</p>
+
+<div id="product-component-5750ab4a271"></div>
+<script type="text/javascript">
+/*<![CDATA[*/
+
+(function () {
+  var scriptURL = 'https://sdks.shopifycdn.com/buy-button/latest/buy-button-storefront.min.js';
+  if (window.ShopifyBuy) {
+    if (window.ShopifyBuy.UI) {
+      ShopifyBuyInit();
+    } else {
+      loadScript();
+    }
+  } else {
+    loadScript();
+  }
+
+  function loadScript() {
+    var script = document.createElement('script');
+    script.async = true;
+    script.src = scriptURL;
+    (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(script);
+    script.onload = ShopifyBuyInit;
+  }
+
+  function ShopifyBuyInit() {
+    var client = ShopifyBuy.buildClient({
+      domain: 'bolder-flight-systems.myshopify.com',
+      apiKey: '5d031c37716943c132181e6697fc221a',
+      appId: '6',
+    });
+
+    ShopifyBuy.UI.onReady(client).then(function (ui) {
+      ui.createComponent('product', {
+        id: [1297819107430],
+        node: document.getElementById('product-component-5750ab4a271'),
+        moneyFormat: '%24%7B%7Bamount%7D%7D',
+        options: {
+  "product": {
+    "variantId": "all",
+    "width": "240px",
+    "contents": {
+      "img": false,
+      "imgWithCarousel": false,
+      "title": false,
+      "variantTitle": false,
+      "price": false,
+      "description": false,
+      "buttonWithQuantity": false,
+      "quantity": false
+    },
+    "styles": {
+      "product": {
+        "@media (min-width: 601px)": {
+          "max-width": "100%",
+          "margin-left": "0",
+          "margin-bottom": "50px"
+        }
+      },
+      "variantTitle": {
+        "font-size": "16px"
+      },
+      "title": {
+        "font-size": "26px"
+      },
+      "description": {
+        "font-size": "16px"
+      },
+      "price": {
+        "font-size": "18px"
+      },
+      "compareAt": {
+        "font-size": "15px"
+      }
+    }
+  },
+  "cart": {
+    "contents": {
+      "button": true
+    },
+    "styles": {
+      "footer": {
+        "background-color": "#ffffff"
+      }
+    }
+  },
+  "modalProduct": {
+    "contents": {
+      "img": false,
+      "imgWithCarousel": true,
+      "variantTitle": false,
+      "buttonWithQuantity": true,
+      "button": false,
+      "quantity": false
+    },
+    "styles": {
+      "product": {
+        "@media (min-width: 601px)": {
+          "max-width": "100%",
+          "margin-left": "0px",
+          "margin-bottom": "0px"
+        }
+      }
+    }
+  },
+  "productSet": {
+    "styles": {
+      "products": {
+        "@media (min-width: 601px)": {
+          "margin-left": "-20px"
+        }
+      }
+    }
+  }
+}
+      });
+    });
+  }
+})();
+/*]]>*/
+</script>
+
 <h3 id="marmot-flight-management-unit-160">Marmot Flight Management Unit $160</h3>
 
 <p><img src="/assets/images/marmot_200.png" alt="image-left" class="align-left" /></p>
@@ -266,8 +541,6 @@
 /*]]>*/
 </script>
 
-<p class="notice--warning">This system is intended for research, development, and educational purposes. It is not a ready-to-fly autopilot at this time. We provide tested hardware, low level sensor drivers, a development environment, and support to enable our customers to develop software, analyze data, and conduct research.</p>
-
 <h3 id="raven-sensor-and-actuator-node-300">Raven Sensor and Actuator Node $300</h3>
 
 <p><img src="/assets/images/raven_200.png" alt="image-right" class="align-right" /></p>
@@ -396,8 +669,6 @@
 })();
 /*]]>*/
 </script>
-
-<p class="notice--warning">This system is intended for research, development, and educational purposes. It is not a ready-to-fly autopilot at this time. We provide tested hardware, low level sensor drivers, a development environment, and support to enable our customers to develop software, analyze data, and conduct research.</p>
 
 <h3 id="swift-air-data-75">Swift Air Data $75</h3>
 
