--- a/products/index.html
+++ b/products/index.html
@@ -138,37 +138,37 @@
 <p style="font-size: 80%;">All of our products include free domestic shipping. International, business, and research institution customers, please <a href="mailto:info@bolderflight.com">contact us</a> for pricing, support, and engineering service contracts.</p>
 
 <h3 id="integrated-research-drones">Integrated Research Drones</h3>
-<p style="font-size: 80%;">Two fixed wing and one multi rotor drone are available fully integrated and ready for research. The fixed wing platforms are based on the X-UAV Talon and <a href="https://www.horizonhobby.com/EFL4025">Ultra Stick 25e</a> while the <a href="https://www.dji.com/flame-wheel-arf">DJI Flame Wheel</a> is used for our multi rotor platform.</p>
+<p style="font-size: 80%;">Two fixed wing and one multi rotor drone are available fully integrated and ready for research. The fixed wing platforms are based on the X-UAV Talon and <a href="https://www.horizonhobby.com/product/storefronts/almost-ready-to-fly/hangar-9-brand/ultrastick-10cc-arf-han2345">Ultra Stick 60</a> while the <a href="https://www.dji.com/flame-wheel-arf">DJI Flame Wheel</a> is used for our multi rotor platform.</p>
 
 <p style="font-size: 80%;"><a href="https://www.youtube.com/watch?v=FUXRlwhYarU"><img src="/assets/images/talon.png" alt="image-left" class="align-left" /></a> 
 The X-UAV Talon is a large fixed wing drone with a pusher motor configuration and is capable of carrying large payloads. This setup is ideal for research and development for fixed wing drone applications and sensors, such as precision agriculture and power line, road, or rail inspection. Can acheive flight times as long as two hours!</p>
 
-<p style="font-size: 80%;"><img src="/assets/images/us25e.png" alt="image-right" class="align-right" /> 
-The <a href="https://www.horizonhobby.com/EFL4025">Ultra Stick 25e</a> is a maneuverable fixed wing drone. This drone is ideal for flight controls and dynamics education and research. It is structurally stiff with low inherent stability. The drone is small, lightweight, and hand launchable. This configuration has been used extensively at the University of Minnesota for flight controls and dynamics courses and research. Flight validated aerodynamic models and Simulink simulations are available.</p>
+<p style="font-size: 80%;"><img src="/assets/images/us60.png" alt="image-right" class="align-right" /> 
+The <a href="https://www.horizonhobby.com/product/storefronts/almost-ready-to-fly/hangar-9-brand/ultrastick-10cc-arf-han2345">Ultra Stick 60</a> is a maneuverable fixed wing drone. This drone is ideal for flight controls and dynamics education and research. It is structurally stiff with low inherent stability. The drone is small, lightweight, and hand launchable. Various sizes of Ultra Stick aircraft been used extensively at the University of Minnesota for flight controls and dynamics courses and research. These aircraft are also used at NASA and DLR (the German equivalent of NASA) for early stage research. Flight validated aerodynamic models and Simulink simulations are available. We think the Ultra Stick 60 is the perfect size, more payload capacity than the Ultra Stick 25e and much easier to transport and operate than the Ultra Stick 80 or 120.</p>
 
 <p style="font-size: 80%;">The <a href="https://www.dji.com/flame-wheel-arf">DJI Flame Wheel</a> is a large hexacopter. With ample payload capability and long flight times, this drone is ideal for researching multi rotor drone applications and sensors, such as precision agriculture and building inspections.</p>
 
 <p style="font-size: 80%;">All of our integrated drones include:</p>
 <ul style="font-size: 80%;">
   <li>Our fully integrated flight control system with software loaded, configured, and tested.</li>
-  <li>Integrated GPS and SBUS receivers.</li>
+  <li>Integrated GPS, SBUS, and telemetry receivers.</li>
   <li>All components necessary for the drone to be flight ready (servos, ESC’s, propellers, batteries).</li>
   <li>Fully calibrated sensors and actuators.</li>
 </ul>
 
-<p style="font-size: 80%;">In addition, our fixed wing drones include a Swift air data system for accurately measuring airspeed. In order to provide a world class aeronautics research platform, the Ultra Stick 25e also includes:</p>
+<p style="font-size: 80%;">In addition, our fixed wing drones include a Swift air data system for accurately measuring airspeed. In order to provide a world class aeronautics research platform, the Ultra Stick 60 also includes:</p>
 <ul style="font-size: 80%;">
   <li>Calibrated potentiometers for measuring and recording control surfaces positions.</li>
-  <li>Raven Sensor and Actuator Node to make the wings swapable between aircraft.</li>
+  <li>Raven Sensor and Actuator Nodes to make the wings swapable between aircraft and add additional sensing capability.</li>
   <li>Moment of inertia and actuator testing.</li>
   <li>Aerodynamic, mass properties, and actuator models and a Simulink simulation.</li>
 </ul>
 
-<p style="font-size: 80%;">Our X-UAV Talon and DJI Flame Wheel integrated research drones are $4,000 and the Ultra Stick 25e is $8,000. Please <a href="mailto:info@bolderflight.com">contact us</a> if you have questions, would like more information, or would like to discuss additional options.</p>
+<p style="font-size: 80%;">Our X-UAV Talon and DJI Flame Wheel integrated research drones are $4,000 and the Ultra Stick 60 is $10,000. Please <a href="mailto:info@bolderflight.com">contact us</a> if you have questions, would like more information, or would like to discuss additional options.</p>
 
 <p style="font-size: 80%;">It’s a high quality, research ready drone in a box! You only need to supply a transmitter and battery charger.</p>
 
-<div id="product-component-602a6e1d08f"></div>
+<div id="product-component-1e154cccd2d"></div>
 <script type="text/javascript">
 /*<![CDATA[*/
 
@@ -202,7 +202,7 @@ The <a href="https://www.horizonhobby.com/EFL4025">Ultra Stick 25e</a> is a mane
     ShopifyBuy.UI.onReady(client).then(function (ui) {
       ui.createComponent('product', {
         id: [1297874485350],
-        node: document.getElementById('product-component-602a6e1d08f'),
+        node: document.getElementById('product-component-1e154cccd2d'),
         moneyFormat: '%24%7B%7Bamount%7D%7D',
         options: {
   "product": {
